@@ -151,3 +151,11 @@ is.directed <- function(graph) {
   .Call("R_igraph_is_directed", graph,
         PACKAGE="igraph")
 }
+
+get.edges <- function(graph, es) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object")
+  }
+  .Call("R_igraph_edges", graph, as.igraph.es(es),
+        PACKAGE="igraph")
+}
